<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background_image"
    android:padding="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="3dp"
        android:background="@drawable/login_layout_background"
        android:padding="30dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:src="@drawable/icon_launcher" />

        <TextView
            android:id="@+id/loginLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|bottom"
            android:paddingTop="20dp"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/material_blue_grey_800"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginLabel"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:hint="@string/email_id_hint"
            android:paddingTop="20dp" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userId"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="20dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingTop="20dp" />


    </RelativeLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/loginFabBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_arrow_forward_white"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_anchor="@id/relativeLayout"
        app:layout_anchorGravity="bottom|center"
        app:pressedTranslationZ="12dp" />


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayout"
        android:gravity="bottom"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="41dp"
            android:text="@string/forgot_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/background_material_light"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>

